# II4KI_Graph_build_v2.0

./: .gitignore  README.md  pyproject.toml  refactor-prompts.md  rules-refactor.md  rules.md
css/: sheets.css
data/: example.json  real_combined.json  srzu_mix.json
public/css/: sheets.css
public/templates/: CH_p1.html  CH_p2.html  CH_p3.html  CH_p4.html  CH_p5.html  CH_p6.html  CH_p7.html  CH_p8.html  CH_p9.html  SGP.html  SRZU.html  manifest.json  project_summary.html  project_summary_backup.html  sheet_template.html
src/mp_graphics/app/: cli.py  html_graphics_pipeline.py  sgp_generator.py
src/mp_graphics/core/: enums.py  page.py  units.py
src/mp_graphics/datasource/: import_txt.py  import_xml.py  import_xml_srzu.py  json_contract.py  json_provider.py
src/mp_graphics/exporters/: html_publisher.py
src/mp_graphics/graphics/: label_place.py  labels.py  styles.py  svg_generator.py
src/mp_graphics/layout/: scheme_layout_builder.py  srzu_renderer.py
tests/: test_labels.py  test_svg_snapshots.py  test_units.py
Исходные данные/: Список пунктов ОМС.txt  координаты ЗУ.txt
